--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -305,6 +305,12 @@
 			<version>4.2.4.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>3.0.12.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
