--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -311,6 +311,18 @@
 			<version>3.0.12.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>2.1.4.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring4</artifactId>
+			<version>2.1.4.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
